Seteamos variables de entorno y verificamos db

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI = mongodb+srv://mariano:root@cluster0.lye3f.mongodb.net/uptask?retryWrites=true&w=majority
 
 JWT_SECRET = palabraSECRETA
+
+FRONTEND_URL = http://localhost:3000
