--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,8 @@ MONGO_URI = mongodb+srv://mariano:root@cluster0.lye3f.mongodb.net/uptask?retryWr
 JWT_SECRET = palabraSECRETA
 
 FRONTEND_URL = http://localhost:3000
+
+EMAIL_USER=8a1c7b3db255d2
+EMAIL_PASS=768612d1dddc37
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
